src/test/ui/resolve/resolve-unknown-trait.stderr
error[E0405]: cannot find trait `SomeNonExistentTrait` in this scope
  --> $DIR/resolve-unknown-trait.rs:12:18
   |
LL | trait NewTrait : SomeNonExistentTrait {}
   |                  ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `SomeNonExistentTrait` in this scope
  --> $DIR/resolve-unknown-trait.rs:15:6
   |
LL | impl SomeNonExistentTrait for isize {}
   |      ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `SomeNonExistentTrait` in this scope
  --> $DIR/resolve-unknown-trait.rs:18:8
   |
LL | fn f<T:SomeNonExistentTrait>() {}
   |        ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0601]: `main` function not found in crate `resolve_unknown_trait`
   |
   = note: consider adding a `main` function to `$DIR/resolve-unknown-trait.rs`

error: aborting due to 4 previous errors

Some errors occurred: E0405, E0601.
For more information about an error, try `rustc --explain E0405`.
